--- a/index.html
+++ b/index.html
@@ -601,6 +601,41 @@
             font-size: 0.9rem;
         }
 
+        /* MODIFICA: Nuova sezione Countdown con immagine di sfondo */
+        #countdown-section {
+            position: relative;
+            background: url('/battesimo/img/background-timer.jpg') center/cover no-repeat;
+            padding: 80px 0;
+            overflow: hidden;
+        }
+
+        #countdown-section::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.85);
+            z-index: 1;
+        }
+
+        #countdown-section .container {
+            position: relative;
+            z-index: 2;
+        }
+
+        #countdown-section .section-title {
+            color: var(--color-text);
+            text-shadow: 1px 1px 3px rgba(255, 255, 255, 0.8);
+        }
+
+        #countdown-section .countdown-item {
+            background-color: rgba(255, 255, 255, 0.9);
+            border: 2px solid var(--color-gold);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.15);
+        }
+
         /* Responsive */
         @media (max-width: 768px) {
             .sidebar-menu {
