FIXING famiglia immagine

--- a/index.html
+++ b/index.html
@@ -343,8 +343,8 @@
         }
 
         .patrizia-image {
-            width: 100px;
-            height: 100px;
+            width: 130px; /* Aumentato da 100px a 130px */
+            height: 130px; /* Aumentato da 100px a 130px */
             border-radius: 50%;
             overflow: hidden;
             margin-bottom: 20px;
@@ -676,8 +676,8 @@
             }
             
             .patrizia-image {
-                width: 80px;
-                height: 80px;
+                width: 100px; /* Ridotto per dispositivi mobili */
+                height: 100px; /* Ridotto per dispositivi mobili */
             }
             
             .patrizia-name {
@@ -831,7 +831,7 @@
             <!-- Rettangolo Patrizia -->
             <div class="patrizia-container fade-in">
                 <div class="patrizia-image">
-                    <img src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" alt="Patrizia">
+                    <img src="/battesimo/img/profile.jpg" alt="Patrizia">
                 </div>
                 <div class="patrizia-rectangle">
                     <div class="patrizia-name" id="patriziaName">Patrizia ♡</div>
